--- a/demo/demo.styl
+++ b/demo/demo.styl
@@ -4,4 +4,31 @@
 	padding 0
 
 body
-	font: 12px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
+	background #eee
+	font 16px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
+
+table
+	border-collapse collapse
+	bottom 0
+	left 0
+	margin auto
+	position absolute
+	right 0
+	top 0
+	width 700px
+
+td
+th
+	border-bottom 1px solid #ccc
+	padding 10px
+	vertical-align bottom
+
+	&:first-of-type
+		font-weight bold
+		text-align right
+		width 200px
+
+th
+	background #00C797
+	border 0
+	color #fff
